--- a/css/animate.css
+++ b/css/animate.css
@@ -3020,11 +3020,13 @@ Copyright (c) 2014 Daniel Eden
     -webkit-transform: translateY(100%);
             transform: translateY(100%);
     visibility: visible;
+    opacity: 0;
   }
 
   100% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
+            opacity: 1;
   }
 }
 
